2009-02-09  John W. Eaton  <jwe@octave.org>

	* miscellaneous/Makefile.in (SOURCES): Include __xzip__.m in the list.

	* testfun/rundemos.m: Error if fopen fails.

2009-02-08  John W. Eaton  <jwe@octave.org>

	* Makefile.in (install install-strip): Don't install ls-R file.
	(uninstall): Don't uninstall ls-R file.

2009-02-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Document support for complex holomorphic
	systems. Improve guarded evaluation.

2009-02-05  John W. Eaton  <jwe@octave.org>

	* miscellaneous/news.m: Use puts instead of printf.

2009-02-05  Thomas D. Dean  <tomdean@speakeasy.org>

	* polynomial/polyout.m: Replace com2str with num2str, and minor
	style changes.

2009-02-04  John W. Eaton  <jwe@octave.org>

	* help/which.m: Still print something sensible if type is empty.

2009-02-04  Soren Hauberg  <hauberg@gmail.com>
            Thomas Treichl  <Thomas.Treichl@gmx.net>

	* miscellaneous/Makefile.in (SOURCES): Add bzip2.m to the list.

2009-02-04  Frederick Umminger  <Frederick_Umminger@playstation.sony.com>

	* signal/freqz.m: Ensure causal phase response.
	Handle long input correctly.

2009-02-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot/__go_draw_axes__.m: Pass "interpolate 0, 0" to gnuplot
	instead of "interpolate 4, 4".

2009-02-04  John W. Eaton  <jwe@octave.org>

	* audio/wavwrite.m, deprecated/splu.m, general/bitcmp.m,
	general/fliplr.m, general/flipud.m, general/genvarname.m,
	general/nargchk.m, general/nargoutchk.m, general/quadgk.m,
	general/rot90.m, geometry/griddata.m, geometry/rectint.m,
	geometry/voronoi.m, geometry/voronoin.m,
	help/__strip_html_tags__.m, image/brighten.m, image/imfinfo.m,
	image/imread.m, linear-algebra/cond.m, linear-algebra/condest.m,
	linear-algebra/dmult.m, linear-algebra/dot.m,
	linear-algebra/expm.m, linear-algebra/housh.m,
	linear-algebra/onenormest.m, linear-algebra/subspace.m,
	miscellaneous/compare_versions.m, optimization/__all_opts__.m,