@@ -1,3 +1,9 @@
+2008-03-14  Jaroslav Hajek <highegg@gmail.com>
+
+	* general/interp2.m: Added support for pchip bicubic interpolation.
+	Also simplified code and added support for natural extrapolation via
+	"extrap".
+
 2009-02-09  John W. Eaton  <jwe@octave.org>
 
 	* miscellaneous/Makefile.in (SOURCES): Include __xzip__.m in the list.
